examples/interdomain/nsm_istio_vl3/mtls-check/with-nsm/sample-ns.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: sample
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  namespace: sample
  name: helloworld
  labels:
    app: helloworld
    service: helloworld
spec:
  ports:
    - port: 5000
      name: http
    - port: 80
      name: http80
  selector:
    app: helloworld
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sample
  name: helloworld-v1
  labels:
    app: helloworld
    version: v1
  annotations:
    networkservicemesh.io: kernel://my-vl3-network/nsm-1?dnsName=helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
      version: v1
  template:
    metadata:
      labels:
        app: helloworld
        version: v1
    spec:
      containers:
        - name: helloworld
          # image: docker.io/istio/examples-helloworld-v1
          image: docker.io/kennethreitz/httpbin
          resources:
            requests:
              cpu: "100m"
          imagePullPolicy: IfNotPresent #Always
          ports:
            - containerPort: 80
            - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sample
  name: helloworld-v2
  labels:
    app: helloworld
    version: v2
  annotations:
    networkservicemesh.io: kernel://my-vl3-network/nsm-1?dnsName=hello2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
      version: v2
  template:
    metadata:
      labels:
        app: helloworld
        version: v2
    spec:
      containers:
        - name: helloworld
          image: docker.io/istio/examples-helloworld-v2
          resources:
            requests:
              cpu: "100m"
          imagePullPolicy: IfNotPresent #Always
          ports:
            - containerPort: 5000
