examples/interdomain/nsm_istio_vl3/mtls-check/with-nsm/mtls-dest-rule-disable.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: my-vl3-network
  namespace: istio-system
spec:
  host: '*.my-vl3-network'
  trafficPolicy:
    tls:
      mode: DISABLE
